fix some compile

--- a/config/linea-sepolia.toml
+++ b/config/linea-sepolia.toml
@@ -1,5 +1,17 @@
 [deploy]
+create2_deployer_address = "0x9E2213A9A87ADF5a77B118180c51f728368d4F77"
 owner_address = "0x245C6F7464B6E3843229d353a27B82213cC3Df95"
-payment_token_address = "0x0000000000000000000000000000000000000000"
 padding_gas = 3000
-create2_deployer_address = "0x0000000000000000000000000000000000000000"
+payment_token_address = "0xd55d1D747702900dFe43FEdD5B4A8B09A27a0A4A"
+
+[implementation]
+ZkTLSAccount = "0x48a379643853A8ca5ea16F577F65d9e16a4D51A0"
+ZkTLSGateway = "0xF8686fD410B5374F1d486c6470F28EEF55537b0a"
+ZkTLSManager = "0xD6f0E7825E74792A39c8c1c0496941fb3A677E60"
+
+[proxy]
+ZkTLSGateway = "0x62dAb389F027d02642B74715c13dd1C2813Fb375"
+ZkTLSManager = "0x168b7cAE8c681e935868D988180E54De1433AA03"
+
+[beacon]
+ZkTLSAccount = "0xC7cF32Ebbcc16010F48c2eB225140c9b81e2CE93"
