--- a/foundry.toml
+++ b/foundry.toml
@@ -9,3 +9,5 @@ fs_permissions = [{ access = "read-write", path = "config/" }]
 
 [dependencies]
 forge-std = "1.9.4"
+"@openzeppelin-contracts-upgradeable" = "5.1.0"
+"@openzeppelin-contracts" = "5.1.0"
