--- a/config/anvil.toml
+++ b/config/anvil.toml
@@ -1,17 +1,19 @@
 [deploy]
-create2_deployer_address = "0xb7dc1564a131ecEb13ED8Dda7550C13045458Bc7"
-owner_address = "0x245C6F7464B6E3843229d353a27B82213cC3Df95"
+create2_deployer_address = "0xA51c1fc2f0D1a1b8494Ed1FE312d7C3a78Ed91C0"
+owner_address = "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
 padding_gas = 3000
-payment_token_address = "0xd4059462E8e17bf2528D9126eD65347Fa373512D"
+payment_token_address = "0x0DCd1Bf9A1b36cE34237eEaFef220932846BCD82"
 
 [implementation]
-ZkTLSAccount = "0x65D809Bc23f76ada0f445d2D9A66B7D20a72e420"
-ZkTLSGateway = "0x8e6Cfd76Ea2782CDAF38b3CeDB9030cb93e895BB"
-ZkTLSManager = "0x3cF23C39ec6091b9eC3B7704e2c129d96DDCE1E6"
+AccessManager = "0xF692C13E42238A07Af2441281332865B1A4B5e5a"
+ZkTLSAccount = "0x1FB272Dd45a0DCCE45632c6E1528cA6C85795E9D"
+ZkTLSGateway = "0xBf880CFB1E89106732c7cBda1Cf1e8D6a133DCff"
+ZkTLSManager = "0xc6D971aB9Ab0EEA7ed89Bf050e35Ba633ad4f166"
 
 [proxy]
-ZkTLSGateway = "0x1482A3Ca9b5BbaD4b14E860F23451B9fA2f4D053"
-ZkTLSManager = "0x01CB86c0F35b7b229C922f028AA86e10861b8BBb"
+ZkTLSGateway = "0x2BBa725E0B4f063ed364afC308Bd52bceb2F459c"
+ZkTLSManager = "0x1F332D11a29B3e7B3E2d6FBD224A50c8c83bE174"
 
 [beacon]
-ZkTLSAccount = "0x96234410f0adb2ac7d443e5831eAc08F5DD8c272"
+AccessManager = "0x08c5820FDBCdA028851054AC510c04F3C3175c61"
+ZkTLSAccount = "0x6a97B3389971918e86256E6A17bdB3ef39942887"
