Feat: Add verifier for sp1 and Risc0 (#5)
* add sp1 contracts

* add risc0 deps

* add risc0 prover

--- a/foundry.toml
+++ b/foundry.toml
@@ -14,3 +14,5 @@ gas_reports = ["ZkTLSGateway", "ZkTLSAccount", "ZkTLSManager"]
 forge-std = "1.9.4"
 "@openzeppelin-contracts-upgradeable" = "5.1.0"
 "@openzeppelin-contracts" = "5.1.0"
+sp1-contracts = { version = "3.0.0", url = "https://github.com/succinctlabs/sp1-contracts/archive/refs/tags/v3.0.0.zip" }
+risc0-ethereum = { version = "1.1.4", url = "https://github.com/risc0/risc0-ethereum/archive/refs/tags/v1.1.4.zip" }
