Feat/enable gh pages (#4)
* Enable document generation with forge doc
* Add docs/assets and docs/book.toml for mdbook customization
* Change src to contracts
* Fix import errors in tests and scripts
* Add document update on main branch push

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ out/
 /broadcast/*/31337/
 /broadcast/**/dry-run/
 
-# Docs
-docs/
+# Docs - include bool.toml and assets
+docs/*
+!docs/assets
+!docs/book.toml
 
 # Dotenv file
 .env
