--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,7 @@ libs = ["lib", "dependencies"]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
 solc = "0.8.28"
+evm_version = "paris"
 
 fs_permissions = [{ access = "read-write", path = "config/" }]
 gas_reports = ["ZkTLSGateway", "ZkTLSAccount", "ZkTLSManager"]
