--- a/config/linea-sepolia.toml
+++ b/config/linea-sepolia.toml
@@ -1,18 +1,19 @@
 [deploy]
-create2_deployer_address = "0x04761a3E8093decaF771b5958B5702A0E17f38A3"
-owner_address = "0x245C6F7464B6E3843229d353a27B82213cC3Df95"
+create2_deployer_address = "0xEFd47aB1eE37Aa6ea0535217E8489B3d76a3d780"
+owner_address = "0x487AC9BA5d5B5e81865092f24cd34C5270B48A12"
 padding_gas = 3000
-payment_token_address = "0x22fe21E19E3121B642F2e61b8E3f922bEb22F01B"
-faucet_address = "0x68d7a9B7B5950a1604DC23ba1Be9608B341f063F"
+payment_token_address = "0x7Fc7aD1AcFD27b6024AfFE417695B8Dc71BF4918"
 
 [implementation]
-ZkTLSAccount = "0x83A6efF985F637286a82Ef2139cE9B9a1a5552e3"
-ZkTLSGateway = "0xA4860098D0F266995f50c9A282FB52a4313A5c3B"
-ZkTLSManager = "0x14eE2f770252aDEE5b25373040a7Db964104eCbb"
+AccessManager = "0x4EbF43f48B759E3ec679064BeC801BFCf0d92611"
+ZkTLSAccount = "0xDce4CEE42D323774808aBf61C9096651Ff0d1848"
+ZkTLSGateway = "0x0a8A76Daa33808605783231262F6433b3663CbBE"
+ZkTLSManager = "0x0c53024162418c4D45292657F82c63b4FbCD366e"
 
 [proxy]
-ZkTLSGateway = "0x0d26e10aB50fc195f38ca31A61e5BeDf761413A4"
-ZkTLSManager = "0xeE937b49eD211144A8478d892346811E2feAcAE9"
+ZkTLSGateway = "0x15BEd390B6853ef966d3E7b66BCC99c825f8CC4e"
+ZkTLSManager = "0x15D8fe721EF1313BE10881ff6D691f633ef590c8"
 
 [beacon]
-ZkTLSAccount = "0xF0967B813BAB43046f6E03D879C5013B0ad90E73"
+AccessManager = "0x62e8D82585fCc4962330adD84b74da94780dc523"
+ZkTLSAccount = "0xaC39De2C971C64Ee6A8E118786Cd2ba11A9f0734"
