--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ out/
 !/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
-
+/broadcast/*/11155111
+/broadcast/*/31337
 # Docs - include bool.toml and assets
 docs/*
 !docs/assets
