deploy in linea spolia

--- a/config/anvil.toml
+++ b/config/anvil.toml
@@ -1,6 +1,19 @@
 [deploy]
-owner_address = "0x245C6F7464B6E3843229d353a27B82213cC3Df95"
-payment_token_address = "0x37aFf2Bf61a2641fdc84e1056d9154364E2fcAf9"
-padding_gas = 3000
 create2_deployer_address = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
-faucet_address = "0xe0986738a718b5e80e7E6aB85b1F66F79C72991D"
+owner_address = "0x245C6F7464B6E3843229d353a27B82213cC3Df95"
+padding_gas = 3000
+payment_token_address = "0x0000000000000000000000000000000000000000"
+
+[implementation]
+AccessManager = "0xc034748e6D46B80334B89D7184125eA1Cc2a3bBC"
+ZkTLSClient = "0x2346eb00106812143DE72caC3f5DDB9BCd5903DB"
+ZkTLSGateway = "0x955463d5661e55bBC8B691880E8FEE5172251c5f"
+ZkTLSManager = "0x90f6b1A120cC7D583E058C069e12E8CfcF423aF8"
+
+[proxy]
+ZkTLSGateway = "0x8245129d3810BC0E90913014DA3BbAf88dDeF488"
+ZkTLSManager = "0x0711D7A5610532F34deC6c42143aA6Ba1DAaD41b"
+
+[beacon]
+AccessManager = "0xdf7D0d5E001C31482c03530d0D912C0fB068b081"
+ZkTLSClient = "0x420bb06573e24f807Dc9E130A497915C2A15267E"
