--- a/foundry.toml
+++ b/foundry.toml
@@ -16,7 +16,7 @@ forge-std = "1.9.4"
 "@openzeppelin-contracts-upgradeable" = "5.1.0"
 "@openzeppelin-contracts" = "5.1.0"
 risc0-ethereum = { version = "1.1.4", url = "https://github.com/risc0/risc0-ethereum/archive/refs/tags/v1.1.4.zip" }
-sp1-contracts = { version = "3.0.0", url = "https://github.com/succinctlabs/sp1-contracts/archive/refs/heads/main.zip" }
+sp1-contracts = { version = "4.0.0", url = "https://github.com/succinctlabs/sp1-contracts/archive/refs/tags/v4.0.0.zip" }
 
 [doc]
 out = "docs"
