remove unsed code

--- a/config/anvil.toml
+++ b/config/anvil.toml
@@ -1,3 +1,18 @@
 [deploy]
+create2_deployer_address = "0x68B1D87F95878fE05B998F19b66F4baba5De1aed"
 owner_address = "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
 payment_token_address = "0x0000000000000000000000000000000000000000"
+
+[implementation]
+AccessManager = "0xdA2a81CC639D5C0Bc515B774A9DdDf274317D239"
+ZkTLSClient = "0xa7aC8cf7b0D58F6384887A472Aa8a87CEAb14829"
+ZkTLSGateway = "0xD3D14eCF1e26C9972F246eC58Ec73eFd24eDE612"
+ZkTLSManager = "0x1Ad31F9860B5a31E1b3a9620FeE2aE52197cDB46"
+
+[proxy]
+ZkTLSGateway = "0xa7cB2f9b5BD2941d8C7e314Dd73ec3B0eD8EB95e"
+ZkTLSManager = "0x0B3f8a0Acba90B5926d35ef960d32B3055Fee4F6"
+
+[beacon]
+AccessManager = "0x8766954B424074E811A3CAb4d65D88D9cf7EFB5F"
+ZkTLSClient = "0xCA806Cb4bfDC398349D9F06A0aAdc9E563616878"
